pdp con immagini

--- a/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
+++ b/Esterni/Piano_di_progetto/Piano_di_progetto_3_0_0.tex
@@ -2084,6 +2084,27 @@ Al fine di conseguire il miglior risultato possibile, il team ha deciso di utili
 \caption{Differenza preventivo-consuntivo per ruolo, \PDC. Colonna \emph{Costo} in euro (\euro).}
 \end{figure}
 
+\pagebreak
+\begin{figure}[H]
+\makebox[\textwidth][c]{
+\includegraphics[width=1.1\textwidth]{img/final/orevv.png}}
+\label{tab:cgen1}
+
+  \caption{Ore a consuntivo {\VV} per ruolo e per persona, valori in ore.}
+\end{figure}
+
+
+
+\begin{figure}[H]
+\makebox[\textwidth][c]{
+\includegraphics[width=1.1\textwidth]{img/final/costovv.png}}
+\label{tab:cgen1}
+
+  \caption{Costo a consuntivo {\VV} per ruolo e per persona, valori in euro (\euro).}
+\end{figure}
+\pagebreak
+
+
 \subsubsection{Considerazioni}
 
 Il nuovo preventivo a finire precedentemente presentato è stato rispettato in pieno: al fine di conseguire la maggior qualità possibile con le risorse a disposizione è stato deciso di incrementate di 6 ore le attività preventivate per la verifica.
@@ -2160,6 +2181,29 @@ Questo quadro riassuntivo esclude il periodo di \AR{}: i costi che seguono \text
   
 }\label{tab:cgen}
 \end{figure}
+
+
+
+
+\begin{figure}[H]
+\makebox[\textwidth][c]{
+\includegraphics[width=1.2\textwidth]{img/final/oretotali.png}}
+\label{tab:cgen1}
+
+  \caption{Ore a consuntivo totali per ruolo e per persona, valori in ore.}
+\end{figure}
+
+
+
+\begin{figure}[H]
+\makebox[\textwidth][c]{
+\includegraphics[width=1.2\textwidth]{img/final/costototale.png}}
+\label{tab:cgen1}
+
+  \caption{Costo a consuntivo totale per ruolo e per persona, valori in euro (\euro).}
+\end{figure}
+
+
 \pagebreak
 \subsection{Considerazioni finali}
 \subsubsection{Aumento attività verifica}
@@ -2167,7 +2211,7 @@ Il presente \emph{Piano di Progetto} ha ricevuto vari incrementi nel tempo, ma l
 
 Questa scelta è risultata soddisfacente per l'attività del team: attraverso varie riunioni con il proponente è stato possibile trovare un punto d'incontro che ci ha permesso di ridurre le richieste progettuali e concentrarci nel conseguimento degli obiettivi posti nel \emph{Piano di Qualifica}.
 
-\subsubsection{Pianificazione di \PDC e \VV}
+\subsubsection{Pianificazione di \PDC{} e \VV}
 La pianificazione di queste due fasi ha ricevuto una sostanziale modifica, come già indicato nel consuntivo di periodo rispettivo.
 
 Al termine del progetto, possiamo concludere che la \VV non ne abbia risentito: le attività preventivate sono state svolte senza ritardi ed è stato possibile consegnare il prodotto in tempo. 
