aggiornato diario MU

--- a/Esterni/Manuale_utente/Manuale_utente_1_0_0.tex
+++ b/Esterni/Manuale_utente/Manuale_utente_1_0_0.tex
@@ -3,9 +3,9 @@
 
 \input{../../util/hx-ambiente}
 
-\version{1.0.0}
+\version{2.0.0}
 \creaz{2 aprile 2017}
-\author{\LB, \GG, \AZ}
+\author{\LB, \GG, \PB}
 \supervisor{\PB}
 \uso{esterno}
 \dest{utente}
@@ -49,11 +49,12 @@ Questo manuale è rivolto agli utenti del prodotto. Assumeremo che l'utente di \
 \section{Requisiti} \label{sec:requisiti}
 
 \proj{} è un'applicazione web: l'utente vi accede quindi con un browser web. Assicuriamo il funzionamento del nostro prodotto sui seguenti browser (o su loro versioni successive):
-\begin{itemize} % ho preso quelli che hanno ecmascript 6, all'incirca...
-	\item Microsoft Edge 13;
-	\item Mozilla Firefoz 45;
-	\item Apple Safari 10;
-	\item Google Chrome 57;
+\begin{itemize}
+	\item Google Chrome 47;
+	\item Mozilla Firefoz 43;
+	\item Apple Safari 9;
+	\item Microsoft Edge 25;
+	\item Microsoft Internet Explorer 11;
 	\item Opera 44.
 \end{itemize}
 Sul browser dev'essere attivato JavaScript.
