--- a/Esterni/Manuale_utente/diario.tex
+++ b/Esterni/Manuale_utente/diario.tex
@@ -2,7 +2,11 @@
 % da includere con \include{diario}
 
 \begin{diario}
-	1.0.1 & {\MM} (Programmatore) & 08/10/2017 & Stesura sezione \ref{sec:extra} \\ \hline
+	2.0.0 & {\LB} (Responsabile) & 11/10/2017 & Approvazione del documento \\ \hline
+	1.1.0 & {\PB} (Amministratore) & 11/10/2017 & Verifica del documento \\ \hline
+	1.0.3 & {\GG} (Amministratore) & 10/10/2017 & Aggiornamento e ampliamento dell'insieme di figure \\ \hline
+	1.0.2 & {\LB} (Programmatore) & 08/10/2017 & Stesura sezione \ref{sec:extra} \\ \hline
+	1.0.1 & {\PB} (Amministratore) & 02/10/2017 & Ampliamento sezioni \ref{sec:gui} e \ref{sec:new} \\ \hline
 	1.0.0 & {\AZ} (Responsabile) & 09/04/2017 & Approvazione del documento \\ \hline
 	0.1.0 & {\PB} (Verificatore) & 07/04/2017 & Verifica del documento \\ \hline
 	0.0.6 & {\GG} (Amministratore) & 07/04/2017 & Stesa appendie \ref{app:gloss} \\ \hline
