--- a/Esterni/Definizione_di_prodotto/tex/componenti-FE.tex
+++ b/Esterni/Definizione_di_prodotto/tex/componenti-FE.tex
@@ -1042,7 +1042,7 @@ questa classe ci permette di aggiungere della logica alla collezione di tutti i 
 \\ Rappresenta l'area di disegno principale, contenuta nell'elemento HTML \emph{\#paper}.
 All'interno di questo oggetto di \jointjs{} sono presenti alcuni elementi aggiuntivi.
 \item \nogloxy{\texttt{- visibleElements: {String, String}[]}}
-\\ Contiene le variabili e i metodi visibili all'interno dello scope selezionato. Nell'implementazione corrente, a seguito dell'incontro [RIFERIMENTO] con il committente, è stato deciso di non implementare completamente tali funzionalità, tuttavia mantenendo la possibilità di una futura implementazione; nel caso specifico, sarà implementata solo la visibilità degli attributi e metodi presenti nella classe corrente.
+\\ Contiene le variabili e i metodi visibili all'interno dello scope selezionato. Nell'implementazione corrente, a seguito dell'incontro del 23-3-2017 con il committente, è stato deciso di non implementare completamente tali funzionalità, tuttavia mantenendo la possibilità di una futura implementazione; nel caso specifico, sarà implementata solo la visibilità degli attributi e metodi presenti nella classe corrente.
 \end{itemize}
 \item \textbf{Metodi}:
 \begin{itemize}
